--- a/P.Lakshmi Prasanna_SSSDP10/prasanna_10_loops.ipynb
+++ b/P.Lakshmi Prasanna_SSSDP10/prasanna_10_loops.ipynb
@@ -2545,6 +2545,39 @@
     "  i+=2\n",
     "print(f'Result: {res}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b5ee5a",
+   "metadata": {},
+   "source": [
+    "13/08/2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13f85b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Write  a  program  to  print  distinct  vowels  of  the  string  without  using  set\n",
+    "\n",
+    "1) Let  input  be   RaMA  rAo\n",
+    "    What  is  the  output ?  ---> AO\n",
+    "\n",
+    "2) Hint  1:  Same  as   prog3e  with  minor  changes\n",
+    "\n",
+    "3) What  does  'hyd' . upper()  do ? --->  Returns  'HYD'\n",
+    "'''inp=input(\"Enter an string :\").upper()\n",
+    "result=''\n",
+    "for i in inp:\n",
+    "    if  i=='A' or i=='E' or i=='I' or i=='O' or i=='U':\n",
+    "        if i not in result:\n",
+    "            result+=i\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
