--- a/P.Lakshmi Prasanna_SSSDP10/Arguments_SSSSDP010.ipynb
+++ b/P.Lakshmi Prasanna_SSSDP10/Arguments_SSSSDP010.ipynb
@@ -318,6 +318,65 @@
     "print()#Nothing \n",
     "f1(10.8 , 25 , 'Hyd' , True , EmpNo = 12 , EmpName = 'Rama  Rao' , Salary = 10000.0)#10.8 (25, 'Hyd', True) {'EmpNo': 12, 'EmpName': 'Rama  Rao', 'Salary': 10000.0}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebee73f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Find  outputs (Home  work)\n",
+    "a = 10\n",
+    "def   f1():\n",
+    "\tb = 40\n",
+    "\tprint('a : ' , a)\n",
+    "\tprint('b : ' , b)\n",
+    "\tprint('c : ' , c)\n",
+    "\tprint()\n",
+    "# End  of  f1()  function\n",
+    "b = 20\n",
+    "def    f2():\n",
+    "\ta = 50\n",
+    "\tprint('a : ' , a)\n",
+    "\tprint('b : ' , b)\n",
+    "\tprint('c : ' , c)\n",
+    "# End  of  f2()  function\n",
+    "c = 30\n",
+    "print('a : ' , a)#a :  10\n",
+    "print('b : ' , b)#b : 20\n",
+    "print('c : ' , c)#c : 30\n",
+    "print()\n",
+    "a +=  1\n",
+    "b +=  1\n",
+    "c +=  1\n",
+    "f1()#a :  11 b :  40 c :  31\n",
+    "a +=  1\n",
+    "b +=  1\n",
+    "c +=  1\n",
+    "f2()#a :  50 b :  22 c :  32\n",
+    "print('Bye')#Bye"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "387a9400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find  outputs (Home  work)\n",
+    "def   f1():\n",
+    "\ta = 20\n",
+    "\tprint(a)\n",
+    "\ta += 1\n",
+    "#End  of  the  function\n",
+    "a = 10\n",
+    "print(a)#10\n",
+    "a += 1\n",
+    "f1()#20\n",
+    "print(a)#11"
+   ]
   }
  ],
  "metadata": {
