--- a/Exam1mrng.ipynb
+++ b/Exam1mrng.ipynb
@@ -168,6 +168,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a2602799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter matrix until ctrl+z\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Write a program to determine Transpose of a matrix\n",
+    "input: 10 20 30 40\n",
+    "       50 60 70 80\n",
+    "       90 100 110 120\n",
+    "output:10 50 90 \n",
+    "       20 60 100\n",
+    "       30 70 110\n",
+    "       40 80 120\n",
+    "Hint: Use nested list'''\n",
+    "try:\n",
+    "    a=[]\n",
+    "    print('Enter matrix until ctrl+z')\n",
+    "    while True:\n",
+    "        line=input()\n",
+    "        list=line.split()\n",
+    "        row=[]\n",
+    "        for x in list:\n",
+    "            row.append(row)\n",
+    "except:\n",
+    "    b=[]\n",
+    "    for i in range(len(a[0])):\n",
+    "        c=[]\n",
+    "        for row in a:\n",
+    "            c.append(c)\n",
+    "        b.append(c)\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "76e29e42",
    "metadata": {},
